--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "expo-screen-orientation": "^8.0.0",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-native-responsive-screen": "^1.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
