--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "resturant",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.tsx",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "expo": "~52.0.11",
     "expo-screen-orientation": "^8.0.0",
     "expo-status-bar": "~2.0.0",
