--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-modal": "^13.0.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
