--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native-stack": "^7.2.0",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
+    "babel-preset-expo": "^12.0.4",
     "expo": "~52.0.11",
     "expo-screen-orientation": "^8.0.0",
     "expo-status-bar": "~2.0.0",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-css-interop": "^0.1.22",
     "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "^3.16.6",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^5.0.0",
     "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
